--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: Himangshu Hazarika -> Experiments in code
+description: An anthology of my victories and defeats in computer programming
 
-url: http://brianmaierjr.github.com/long-haul
+url: https://himangshuj.github.io
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
@@ -12,17 +12,17 @@ plugins: [jekyll-paginate]
 paginate: 5
 
 navigation:
-  - title: Home
-    url: /index.html
-  - title: About
-    url: /about
-  - title: Contact
-    url: /contact
+ - title: Home
+   url: /index.html
+ - title: About
+   url: /about
+ - title: Contact
+   url: /contact
 
 social:
-  github: brianmaierjr
-  twitter: brianmaierjr
-  facebook: brianmaierjr
-  email: brimaidesigns@gmail.com
+   github: himangshuj
+   twitter: himangshuj
+   facebook: hjhazarika
+   email: hjhazarika@gmail.com
 
-google_analytics: "UA-58263416-1"
+google_analytics: "UA-74531944-1"
