Added resume template
Signed-off-by: himangshu <himangshu@gozoomo.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Himangshu Hazarika -> Experiments in code
+title: Himangshu Hazarika's experiments in code
 description: An anthology of my victories and defeats in computer programming
 
 url: https://himangshuj.github.io
