Completed v1 of website
Signed-off-by: himangshu <himangshu@gozoomo.com>

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,6 @@ social:
    github: himangshuj
    twitter: himangshuj
    facebook: hjhazarika
-   email: hjhazarika@gmail.com
+   email: hjhazarika AT gmail.com
 
 google_analytics: "UA-74531944-1"
