--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "long-haul",
+  "name": "himangshu's tech blog",
   "version": "0.0.0",
   "description": "A minimal, type-focused Jekyll theme. ",
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Brian Maier Jr.",
+  "author": "Himangshu",
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.26.3",
-    "gulp": "^3.9.0",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "1.0.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-sass": "^2.1.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/brianmaierjr/long-haul.git"
+    "url": "https://github.com/himangshuj/himangshuj.github.io.git"
   },
   "keywords": [
     "jekyll",
