Completed blog on redash and changed about me
Signed-off-by: himangshuj <himangshu@simplycreditinc.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: Himangshu Hazarika's experiments in code
-description: An anthology of my victories and defeats in computer programming
+title: Victories and defeats in computer programming
 
 url: https://himangshuj.github.io
 baseurl: ""
