Fixed Resume and Media Coverage
Signed-off-by: himangshuj <h@project1922.com>

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,8 @@ navigation:
    url: /about
  - title: Contact
    url: /contact
-
+ - title: Media
+   url: /media-coverage
 social:
    github: himangshuj
    twitter: himangshuj
